- Finished up the Content Article Activity type

--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -421,7 +421,19 @@
     margin-top: 0;
   }
 
+  .content-blocks-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: var(--spacing-small);
+  }
 
+  .add-content-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--spacing-tiny);
+  }
 
     // 2.2.1 Assessment
     // -------------------------
