- Fixed unintentional change to theme.css.

--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -1246,7 +1246,7 @@ a.rock-bookmark {
 
 /* CSS Overrides Bottom Start */
 :root {
-    --base-primary: #2196f3;
+    --base-primary: #FF791D;
     --logo-image: url('/Assets/Images/rock-logo-circle-white.svg');
     --base-link: #006DCC;
     --base-secondary: #83758f;
